--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>周翔辉的博客</title>
+  <title>周翔辉的时光驿站</title>
   <meta name="description" content="周翔辉的博客" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.10.0/dist/katex.min.css" integrity="sha384-9eLZqc9ds8eNjO3TmqPeYcDj8n+Qfa4nuSiGYa6DjLNcv9BtN69ZIulL9+8CqC9Y" crossorigin="anonymous">
@@ -15,7 +15,7 @@
   
   
   <link href="https://fankaljead.github.io/css/concated.min.css" rel="stylesheet">
-  <link rel="alternate" type="application/rss+xml" href="https://fankaljead.github.io/index.xml" title="周翔辉的博客" />
+  <link rel="alternate" type="application/rss+xml" href="https://fankaljead.github.io/index.xml" title="周翔辉的时光驿站" />
   
   <style>
     body {
@@ -47,8 +47,8 @@
 
     <main class="card-container side-gutter">
       <header class="list-header">
-        <h1 class="list-header-title">周翔辉的时光机</h1>
-        <p class="list-header-subtext">时间一直一直倒数着</p>
+        <h1 class="list-header-title">人过留名，雁过留声</h1>
+        <p class="list-header-subtext">Never Settle Up</p>
       </header>
       
       
