--- a/index.html
+++ b/index.html
@@ -77,6 +77,14 @@ if (!doNotTrack) {
       <a ontouchstart="cardPressed.call(this)" ontouchend="cardReleased.call(this)" ontouchmove="cardReleased.call(this)" 
   href="https://fankaljead.github.io/posts/life/2020-04-03/" class="card blog-card" rel="bookmark" >
   
+  <div class="card-img-container">
+    <picture>
+      
+      
+      <source srcset="https://fankaljead.github.io/posts/life/2020-04-03/bbbb_hu724d6042989825130b673772237c1fd5_1014149_400x300_fit_q75_lanczos.jpg">
+      <img src="https://fankaljead.github.io/posts/life/2020-04-03/bbbb_hu724d6042989825130b673772237c1fd5_1014149_400x300_fit_q75_lanczos.jpg" class="card-img" >
+    </picture>
+  </div>
   <article class="card-body">
     <h2 class="card-title">2020年4月3日LAlala</h2>
     <p class="card-text">没有什么可说的</p>
