--- a/about/index.html
+++ b/about/index.html
@@ -71,6 +71,7 @@ if (!doNotTrack) {
         
         
         <p><img src="./self1.jpg" alt="self"></p>
+<p>{{netease_music id=&quot;1424774075&rdquo;}}</p>
 <p>姓周，名翔辉，无字无号，无才无德</p>
 
       </article>
