--- a/about/index.html
+++ b/about/index.html
@@ -88,7 +88,7 @@ if (!doNotTrack) {
 	border="0" 
 	marginwidth="0" 
 	marginheight="0" 
-	width=600 
+	width=60%
 	height=86 
 	src="//music.163.com/outchain/player?type=2&id=1424774075&auto=1&height=66">
     </iframe>
