--- a/en/hask-card/index.html
+++ b/en/hask-card/index.html
@@ -44,7 +44,7 @@
     <div class="box">
       <div class="head-time">11:32</div>
 
-      <img src="./img/1.png" alt="" />
+      <img src="https://raw.githubusercontent.com/fankaljead/fankaljead.github.io/master/hask-card/img/1.png" alt="" />
       <div class="mid-time"></div>
       <div class="mask-button"></div>
     </div>
@@ -90,7 +90,7 @@
 
       const maskButton = document.querySelector(".mask-button");
       maskButton.addEventListener("click", (e) => {
-        location.href = "./2.html";
+        location.href = "https://raw.githubusercontent.com/fankaljead/fankaljead.github.io/master/hask-card/2.html";
       });
     </script>
   </body>
