--- a/hask-card/2.html
+++ b/hask-card/2.html
@@ -52,7 +52,7 @@
       <div class="head-time">11:32</div>
       <div class="mid-time">2022.09.29 21:24:89</div>
 
-      <img src="./img/2.png" alt="" />
+      <img src="https://raw.githubusercontent.com/fankaljead/fankaljead.github.io/master/hask-card/img/2.png" alt="" />
 
       <div class="address">重庆市</div>
 
@@ -100,7 +100,7 @@
 
       const maskButton = document.querySelector(".mask-button");
       maskButton.addEventListener("click", (e) => {
-        location.href = "./index.html";
+        location.href = "https://raw.githubusercontent.com/fankaljead/fankaljead.github.io/master/hask-card/index.html";
       });
     </script>
   </body>
