--- a/hask-card/2.html
+++ b/hask-card/2.html
@@ -8,6 +8,7 @@
     <style>
       body {
         font-family: "我想做你女朋友";
+        margin: 0;
       }
       img {
         height: 100%;
@@ -43,7 +44,7 @@
         bottom: 57vw;
         color: rgb(70, 70, 76);
         font-weight: bolder;
-        font-size: 0.81em;
+        font-size: .81em;
       }
     </style>
   </head>
@@ -114,7 +115,7 @@
       }
 
       document.addEventListener(
-        "touchend",
+        "dbclick",
         function (e) {
           toggleFullScreen();
         },
