change img qiniu

--- a/hask-card/2.html
+++ b/hask-card/2.html
@@ -8,6 +8,8 @@
     <style>
       body {
         font-family: "我想做你女朋友";
+      }
+      *{
         margin: 0;
       }
       img {
@@ -18,13 +20,14 @@
       .head-time {
         position: absolute;
         left: 5.5vw;
-        top: 5vw;
+        top: 2.5vw;
+        font-size: 0.8em;
         padding-right: 3vw;
       }
       .mid-time {
         position: absolute;
         left: 42.5vw;
-        top: 97vw;
+        top: 98vw;
         color: rgb(182, 182, 189);
         font-size: 1em;
         font-weight: 700;
@@ -53,7 +56,8 @@
       <div class="head-time">11:32</div>
       <div class="mid-time">2022.09.29 21:24:89</div>
 
-      <img src="https://fankaljead.github.io/hask-card/img/2.png" alt="" />
+      <!-- <img src="https://fankaljead.github.io/hask-card/img/2.png" alt="" /> -->
+      <img src="http://img.zhouxianghui.xyz/2.png" alt="" />
 
       <div class="address">重庆市</div>
 
