--- a/hask-card/index.html
+++ b/hask-card/index.html
@@ -18,14 +18,15 @@
       .head-time {
         position: absolute;
         left: 5.5vw;
-        top: 5vw;
+        top: 2.5vw;
+        font-size: 0.8em;
         padding-right: 3vw;
         background-color: rgb(54, 140, 245);
       }
       .mid-time-container {
         position: absolute;
         left: 6vw;
-        top: 124vw;
+        top: 125vw;
         color: rgb(255, 255, 255);
         font-size: 1em;
         display: flex;
@@ -55,7 +56,9 @@
     <div class="box">
       <div class="head-time">11:32</div>
 
-      <img src="https://fankaljead.github.io/hask-card/img/1.png" alt="" />
+      <!-- <img src="https://fankaljead.github.io/hask-card/img/1.png" alt="" /> -->
+      <img src="http://img.zhouxianghui.xyz/1.png" alt="" />
+
       <div class="mid-time-container">
         <div class="mid-time"></div>
         <div class="mid-seconds"></div>
